# entry-job-seeker

./: .gitignore  main.py  pyproject.toml
extensions/: date_formatter.py  extract_technologies.py  filter_offer.py
model/: JobListing.py  JobOffer.py  __init__.py
notifications/: discord.py
scrapers/: jobscz.py  pracecz.py
sheets/: google_sheets.py
tests/: test_google_sheets.py
