[project]
name = "entry-job-seeker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.15.0",
    "certifi==2026.6.17",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "cryptography==49.0.0",
    "google-auth==2.55.1",
    "google-auth-oauthlib==1.4.0",
    "gspread==6.2.1",
    "idna==3.18",
    "lxml==6.1.1",
    "oauthlib==3.3.1",
    "pyasn1==0.6.3",
    "pyasn1-modules==0.4.2",
    "pycparser==3.0",
    "requests==2.34.2",
    "requests-oauthlib==2.0.0",
    "soupsieve==2.8.4",
    "typing-extensions==4.15.0",
    "urllib3==2.7.0",
]
